test/files/errors/structure_notFound.jg
_main int ()
{
    ex struct_test = { x = 0, y = 0 };

    0 return;
}